--- a/stylesheets/components/_header.scss
+++ b/stylesheets/components/_header.scss
@@ -1,5 +1,50 @@
-.container {
-  width: 500px;
-  border: 5px solid red;
-  color: $color-grey;
+.sc-header-container {
+  width: 100%;
+  height: 125px;
+  display: flex;
+  align-items: center;
+  border: 1px solid red;
+  .sc-title-container {
+    width: 60%;
+    margin: 0 auto;
+    .sc-title {
+      font-family: $font-family;
+      font-size: 2rem;
+      font-weight: 300;
+      position: relative;
+      .sc-bracket1 {
+        color: $teal;
+      }
+      .sc-bracket2 {
+        @extend .sc-bracket1;
+        background: #fff;
+        padding-right: 150px;
+        position: absolute;
+        left: 230px;
+        -webkit-transition: all .2s linear;
+        -moz-transition: all .2s linear;
+        -ms-transition: all .2s linear;
+        -o-transition: all .2s linear;
+        transition: all .2s linear;
+      }
+      &:hover .sc-bracket2 {
+        left: 360px;
+      }
+      a {
+        text-decoration: none;
+        font-size: 1.5rem;
+        letter-spacing: 1.5px;
+        color: black;
+        padding: 10px;
+        -webkit-transition: color .2s linear;
+        -moz-transition: color .2s linear;
+        -ms-transition: color .2s linear;
+        -o-transition: color .2s linear;
+        transition: color .2s linear;
+        &:hover {
+          color: $teal;
+        }
+      }
+    }
+  }
 }
