--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -44,12 +44,13 @@ table {
 
 .sc-header-container {
   width: 100%;
+  position: relative;
   height: 125px;
   display: flex;
   align-items: center;
   border: 1px solid red; }
   .sc-header-container .sc-title-container {
-    width: 60%;
+    width: 80%;
     margin: 0 auto; }
     .sc-header-container .sc-title-container .sc-title {
       font-family: "Open Sans", "Arial", sans-serif;
@@ -83,5 +84,20 @@ table {
         transition: color .2s linear; }
         .sc-header-container .sc-title-container .sc-title a:hover {
           color: #62DEBE; }
+
+.sc-flavor-container {
+  width: 80%;
+  height: 200px;
+  margin: 30px auto;
+  border: 1px solid green; }
+
+.sc-body-container {
+  background-color: #EEE;
+  padding: 20px;
+  width: 100%; }
+
+.sc-footer-container {
+  width: 100%;
+  height: 125px; }
 
 /*# sourceMappingURL=main.css.map */
