--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -47,8 +47,7 @@ table {
   position: relative;
   height: 125px;
   display: flex;
-  align-items: center;
-  border: 1px solid red; }
+  align-items: center; }
   .sc-header-container .sc-title-container {
     width: 80%;
     margin: 0 auto; }
@@ -89,7 +88,54 @@ table {
   width: 80%;
   height: 200px;
   margin: 30px auto;
-  border: 1px solid green; }
+  display: flex; }
+  .sc-flavor-container img {
+    box-shadow: 2px 2px 2px #888; }
+  .sc-flavor-container .sc-side {
+    width: 100%;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: "Open Sans", "Arial", sans-serif; }
+
+.sc-flavor-description {
+  background: white;
+  box-shadow: 2px 2px 2px #888;
+  height: 60%; }
+  .sc-flavor-description h4 {
+    font-size: 2rem;
+    padding: 15px 10px;
+    letter-spacing: 1px;
+    color: #62DEBE;
+    font-weight: 300; }
+  .sc-flavor-description p {
+    padding: 5px 10px;
+    font-size: 14px;
+    line-height: 22px; }
+
+.sc-addToCartBar-container {
+  font-weight: 300;
+  font-size: 24px;
+  background: white;
+  box-shadow: 2px 2px 2px #888;
+  height: 30%;
+  display: flex;
+  justify-content: space-between; }
+
+.calculator, .equals {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .calculator div, .equals div {
+    padding: 18px 25px; }
+
+.equals .price-per-unit {
+  background: #EEE; }
+
+.minus:hover, .plus:hover, .total-price {
+  background-color: #62DEBE;
+  color: white; }
 
 .sc-body-container {
   background-color: #EEE;
