--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -55,9 +55,11 @@ table {
       font-family: "Open Sans", "Arial", sans-serif;
       font-size: 2rem;
       font-weight: 300;
-      position: relative; }
+      position: relative;
+      cursor: pointer; }
       .sc-header-container .sc-title-container .sc-title .sc-bracket1, .sc-header-container .sc-title-container .sc-title .sc-bracket2 {
-        color: #62DEBE; }
+        color: #62DEBE;
+        cursor: pointer; }
       .sc-header-container .sc-title-container .sc-title .sc-bracket2 {
         background: #fff;
         padding-right: 150px;
@@ -89,8 +91,34 @@ table {
   height: 200px;
   margin: 30px auto;
   display: flex; }
-  .sc-flavor-container img {
-    box-shadow: 2px 2px 2px #888; }
+  .sc-flavor-container .sc-remove {
+    position: relative;
+    cursor: pointer; }
+    .sc-flavor-container .sc-remove img {
+      box-shadow: 2px 2px 2px #888; }
+    .sc-flavor-container .sc-remove .sc-remove-product {
+      font-family: "Open Sans", "Arial", sans-serif;
+      background-color: #62DEBE;
+      color: white;
+      position: absolute;
+      left: 0;
+      width: 100%;
+      bottom: 0;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      visibility: hidden;
+      -webkit-transition: bottom .2s linear;
+      -moz-transition: bottom .2s linear;
+      -ms-transition: bottom .2s linear;
+      -o-transition: bottom .2s linear;
+      transition: bottom .2s linear; }
+    .sc-flavor-container .sc-remove:hover .sc-remove-product {
+      bottom: 40%;
+      visibility: visible; }
+  .sc-flavor-container .remove {
+    cursor: pointer; }
   .sc-flavor-container .sc-side {
     width: 100%;
     margin-left: 10px;
@@ -129,6 +157,10 @@ table {
   align-items: center; }
   .calculator div, .equals div {
     padding: 18px 25px; }
+  .calculator .minus, .equals .minus {
+    cursor: pointer; }
+  .calculator .plus, .equals .plus {
+    cursor: pointer; }
 
 .equals .price-per-unit {
   background: #EEE; }
@@ -143,7 +175,30 @@ table {
   width: 100%; }
 
 .sc-footer-container {
-  width: 100%;
-  height: 125px; }
+  width: 80%;
+  height: 125px;
+  margin: 30px auto;
+  display: flex;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 300;
+  font-size: 24px;
+  align-items: center;
+  justify-content: space-between;
+  line-height: 2; }
+  .sc-footer-container .taxes {
+    font-size: 14px; }
+  .sc-footer-container .total {
+    text-align: center; }
+    .sc-footer-container .total .price {
+      background: #eee;
+      border-bottom: 2px solid #888;
+      margin-bottom: 5px; }
+    .sc-footer-container .total .checkout {
+      background-color: #62DEBE;
+      color: white;
+      padding: 5px 60px;
+      cursor: pointer; }
+      .sc-footer-container .total .checkout:hover {
+        background-color: #26b48f; }
 
 /*# sourceMappingURL=main.css.map */
