--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -173,6 +173,10 @@ table {
   background-color: #EEE;
   padding: 20px;
   width: 100%; }
+  .sc-body-container p {
+    text-align: center;
+    font-family: "Open Sans", "Arial", sans-serif;
+    font-size: 16px; }
 
 .sc-footer-container {
   width: 80%;
