--- a/stylesheets/components/_footer.scss
+++ b/stylesheets/components/_footer.scss
@@ -1,3 +1,4 @@
+
 .sc-footer-container {
   width: 80%;
   height: 125px;
@@ -28,5 +29,56 @@
         background-color: darken($teal, 20%);
       }
     }
+  }
+  .modalDialog {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0,0.8);
+    z-index: 99999;
+    opacity:0;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    pointer-events: none;
+    .modalContainer {
+      width: 400px;
+      position: relative;
+      margin: 20% auto;
+    	padding: 20px;
+    	border-radius: 10px 0;
+    	background: #fff;
+    	background: -moz-linear-gradient(#fff, #eee);
+    	background: -webkit-linear-gradient(#fff, #eee);
+    	background: -o-linear-gradient(#fff, #eee);
+      .close {
+      	background: $teal;
+      	color: white;
+      	line-height: 25px;
+      	position: absolute;
+      	right: -12px;
+      	text-align: center;
+      	top: -10px;
+      	width: 24px;
+        height: 24px;
+        border-radius: 50%;
+      	text-decoration: none;
+        padding: 5px;
+      	-moz-box-shadow: 1px 1px 3px #000;
+      	-webkit-box-shadow: 1px 1px 3px #000;
+      	box-shadow: 1px 1px 3px;
+        cursor: pointer;
+        &:hover {
+          background-color: darken($teal, 20%);
+
+        }
+      }
+    }
+  }
+  .showModal {
+    opacity: 1;
+    pointer-events: auto;
   }
 }
