--- a/stylesheets/components/_checkout.scss
+++ b/stylesheets/components/_checkout.scss
@@ -1,9 +1,6 @@
 .creditcard-checkout {
-  border: 1px solid red;
   .flip-container {
     perspective: 1000;
-    // width: 100%;
-    // height: 200px;
     &:hover .flipper {
       transform: rotateY(180deg);
     }
@@ -12,15 +9,37 @@
       height: 240px;
       border-radius: 15px;
       backface-visibility: hidden;
-      background-color: red;
+      background-color: #06C;
       position: absolute;
       color: #fff;
       top: 0;
       left: 0;
+      .number {
+        padding-left: 10px;
+      }
+      .card-holder {
+        padding-left: 10px;
+      }
+      .card-expiration-date {
+        padding-left: 10px;
+      }
     }
-    .back {
+    .back {;
       @extend .front;
-      background-color: green;
+      background-color: $color-grey;
+      .strip {
+        position: absolute;
+        background-color: black;
+        height: 40px;
+        width: 100%;
+        top: 50px;
+      }
+      .ccv {
+        position: absolute;
+        padding-left: 10px;
+        bottom: 20px;
+        color: black;
+      }
     }
     .flipper {
       transition: 0.6s;
@@ -35,4 +54,71 @@
       transform: rotateY(180deg);
     }
   }
+}
+
+.form {
+  position: relative;
+  font-size: 14px;
+  top: 280px;
+  padding-bottom: 250px;
+  label {
+    float: left;
+    margin-right: 15px;
+    width: 100%;
+    color: darken($teal, 0.4);
+    font-weight: bold;
+
+  }
+  input {
+    border-radius: 5px;
+    height: 20px;
+    border: none;
+    margin: 5px;
+  }
+  .cc-number {
+    width: 100%;
+    .input-card-number {
+      width: 21%;
+      margin: 7px;
+    }
+  }
+  .card-holder {
+    width: 100%;
+    input {
+      width: 95%;
+    }
+  }
+  .thirdRow {
+    position: relative;
+    .expiration {
+      float: left;
+      .select {
+        display: inline-block;
+        :first-child {
+          margin-right: 10px;
+        }
+      }
+    }
+  }
+  .checkout-btn {
+    clear: both;
+    display: block;
+    width: 200px;
+    margin: 20px auto;
+    font-size: 14px;
+    line-height: 0px;
+    height: 20px;
+    padding: 20px;
+    vertical-align: middle;
+    background: $teal;
+    color: white;
+    border: none;
+    &:hover {
+      background-color: darken($teal, 20%);
+    }
+  }
+}
+
+.trigger-flip {
+  transform: rotateY(180deg);
 }
