--- a/stylesheets/components/_flavorComponent.scss
+++ b/stylesheets/components/_flavorComponent.scss
@@ -62,6 +62,8 @@
     padding: 5px 10px;
     font-size: 14px;
     line-height: 22px;
+    display: flex;
+    justify-content: flex-start;
   }
 }
 
